--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
                                   
                                   <p>
                                   <div class="Entrar">
-                                    <input type="submit" value="Entrar" />  
+                                    <button class="button" type="submit">Entrar</button>
                                 </div>
                                  </p>
                                   
