--- a/cadastro.html
+++ b/cadastro.html
@@ -49,7 +49,7 @@
                                         <br>  
 
                                         <div class="Enviar">
-                                        <input type="submit" value="Enviar"/>  
+                                        <button class="button" type="submit">Enviar</button>
                                     </div>
          
             </body>
