--- a/backup-Trabalho/index.html
+++ b/backup-Trabalho/index.html
@@ -88,8 +88,9 @@
               <span class="sr-only ">Next</span>
             </a>
           </div>
+
+          <span class="texto_promocao_config ">Promoções<br></span>
           
-          <span id="texto_promocao_config ">Promoções<br></span>
           <span class="do ">do</span> <br> <span class="dia ">dia!</span>
     </section>
 </body>
