--- a/cadastrarUsuario.html
+++ b/cadastrarUsuario.html
@@ -39,7 +39,7 @@
         </section>
 
         <section class="p-2">
-            <ul class="nav">
+            <ul class="nav nav-pills mb-3 " id="pills-tab" role="tablist">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Inicio</a>
                 </li>
@@ -49,7 +49,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="cadastrarUsuario.html">Cadastrar Usuario</a>
+                    <a class="nav-link active btn btn-danger" href="cadastrarUsuario.html">Cadastrar Usuario</a>
                 </li>
 
                 <li class="nav-item">
