--- a/cadastroRestaurante.html
+++ b/cadastroRestaurante.html
@@ -47,7 +47,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="cadastroRestaurante.html">Cadastrar Restaurante</a>
+                    <a class="nav-link active btn btn-danger" href="cadastroRestaurante.html">Cadastrar Restaurante</a>
                 </li>
 
                 <li class="nav-item">
