--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="p-2">
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Inicio</a>
+                    <a class="nav-link active btn btn-danger" href="index.html">Inicio</a>
                 </li>
 
                 <li class="nav-item">
