--- a/login.html
+++ b/login.html
@@ -54,7 +54,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="login.html">Entrar</a>
+                    <a class="nav-link active btn btn-danger" href="login.html">Entrar</a>
                 </li>
             </ul>
         </section>
